--- a/Runtime/Vibration.asmdef
+++ b/Runtime/Vibration.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "YuQingGame.Vibration",
+    "name": "YuQingCasual.Vibration",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
