--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"name": "com.yuqinggame.vibration",
-	"displayName":"Vibration",
-	"version": "0.1.0",
-	"unity": "2021.3",
-	"description": "just vibration",
-	"dependencies": {
-	}
+  "name": "com.yuqingcasual.vibration",
+  "displayName": "Vibration",
+  "version": "0.1.0",
+  "unity": "2021.3",
+  "description": "just vibration",
+  "dependencies": {}
 }
